--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap');
+
+html,
+body {
+  height: 100%;
+  font-family: 'Roboto', sans-serif;
+}
 
 body {
-  font-family: 'Roboto', sans-serif;
+  margin: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.main-content {
+  flex: 1;
 }
